fixed error stretched images

--- a/frontend/src/main/ngx/src/app/main/books/books-detail/books-detail.component.scss
+++ b/frontend/src/main/ngx/src/app/main/books/books-detail/books-detail.component.scss
@@ -1,6 +1,7 @@
 #avatar {
   width: 120px !important;
   height: 120px !important;
+  object-fit: cover;
 }
 
 #description {
